QtBeef/src/Qt/qaccessible.bf

	
	public function void QAccessibleTextInterface_OnAddSelection_action(void* self, c_int startOffset, c_int endOffset);
	[LinkName("QAccessibleTextInterface_OnAddSelection")]
	public static extern void QAccessibleTextInterface_OnAddSelection(void* self, QAccessibleTextInterface_OnAddSelection_action _action);
	
	[LinkName("QAccessibleTextInterface_SuperAddSelection")]
	public static extern void QAccessibleTextInterface_SuperAddSelection(void* self, c_int startOffset, c_int endOffset);
	[LinkName("QAccessibleTextInterface_RemoveSelection")]
	public static extern void QAccessibleTextInterface_RemoveSelection(void* self, c_int selectionIndex);
	
	public function void QAccessibleTextInterface_OnRemoveSelection_action(void* self, c_int selectionIndex);
	[LinkName("QAccessibleTextInterface_OnRemoveSelection")]
	public static extern void QAccessibleTextInterface_OnRemoveSelection(void* self, QAccessibleTextInterface_OnRemoveSelection_action _action);
	
	[LinkName("QAccessibleTextInterface_SuperRemoveSelection")]
	public static extern void QAccessibleTextInterface_SuperRemoveSelection(void* self, c_int selectionIndex);
	[LinkName("QAccessibleTextInterface_SetSelection")]
	public static extern void QAccessibleTextInterface_SetSelection(void* self, c_int selectionIndex, c_int startOffset, c_int endOffset);
	
	public function void QAccessibleTextInterface_OnSetSelection_action(void* self, c_int selectionIndex, c_int startOffset, c_int endOffset);
	[LinkName("QAccessibleTextInterface_OnSetSelection")]
	public static extern void QAccessibleTextInterface_OnSetSelection(void* self, QAccessibleTextInterface_OnSetSelection_action _action);
	
	[LinkName("QAccessibleTextInterface_SuperSetSelection")]
	public static extern void QAccessibleTextInterface_SuperSetSelection(void* self, c_int selectionIndex, c_int startOffset, c_int endOffset);
	[LinkName("QAccessibleTextInterface_CursorPosition")]
	public static extern c_int QAccessibleTextInterface_CursorPosition(void* self);
	
	public function void QAccessibleTextInterface_OnCursorPosition_action(void* self);
	[LinkName("QAccessibleTextInterface_OnCursorPosition")]
	public static extern c_int QAccessibleTextInterface_OnCursorPosition(void* self, QAccessibleTextInterface_OnCursorPosition_action _action);
	
	[LinkName("QAccessibleTextInterface_SuperCursorPosition")]
	public static extern c_int QAccessibleTextInterface_SuperCursorPosition(void* self);
	[LinkName("QAccessibleTextInterface_SetCursorPosition")]
	public static extern void QAccessibleTextInterface_SetCursorPosition(void* self, c_int position);
	
	public function void QAccessibleTextInterface_OnSetCursorPosition_action(void* self, c_int position);
	[LinkName("QAccessibleTextInterface_OnSetCursorPosition")]
	public static extern void QAccessibleTextInterface_OnSetCursorPosition(void* self, QAccessibleTextInterface_OnSetCursorPosition_action _action);
	
	[LinkName("QAccessibleTextInterface_SuperSetCursorPosition")]
	public static extern void QAccessibleTextInterface_SuperSetCursorPosition(void* self, c_int position);
	[LinkName("QAccessibleTextInterface_Text")]
	public static extern libqt_string QAccessibleTextInterface_Text(void* self, c_int startOffset, c_int endOffset);
	
	public function void QAccessibleTextInterface_OnText_action(void* self, c_int startOffset, c_int endOffset);
	[LinkName("QAccessibleTextInterface_OnText")]
	public static extern libqt_string QAccessibleTextInterface_OnText(void* self, QAccessibleTextInterface_OnText_action _action);
	
	[LinkName("QAccessibleTextInterface_SuperText")]
	public static extern libqt_string QAccessibleTextInterface_SuperText(void* self, c_int startOffset, c_int endOffset);
	[LinkName("QAccessibleTextInterface_TextBeforeOffset")]
	public static extern libqt_string QAccessibleTextInterface_TextBeforeOffset(void* self, c_int offset, QAccessible_TextBoundaryType boundaryType, c_int* startOffset, c_int* endOffset);
	
	public function void QAccessibleTextInterface_OnTextBeforeOffset_action(void* self, c_int offset, QAccessible_TextBoundaryType boundaryType, c_int* startOffset, c_int* endOffset);
	[LinkName("QAccessibleTextInterface_OnTextBeforeOffset")]
	public static extern libqt_string QAccessibleTextInterface_OnTextBeforeOffset(void* self, QAccessibleTextInterface_OnTextBeforeOffset_action _action);
	
	[LinkName("QAccessibleTextInterface_SuperTextBeforeOffset")]
	public static extern libqt_string QAccessibleTextInterface_SuperTextBeforeOffset(void* self, c_int offset, QAccessible_TextBoundaryType boundaryType, c_int* startOffset, c_int* endOffset);
	[LinkName("QAccessibleTextInterface_TextAfterOffset")]
	public static extern libqt_string QAccessibleTextInterface_TextAfterOffset(void* self, c_int offset, QAccessible_TextBoundaryType boundaryType, c_int* startOffset, c_int* endOffset);
	
	public function void QAccessibleTextInterface_OnTextAfterOffset_action(void* self, c_int offset, QAccessible_TextBoundaryType boundaryType, c_int* startOffset, c_int* endOffset);
	[LinkName("QAccessibleTextInterface_OnTextAfterOffset")]
	public static extern libqt_string QAccessibleTextInterface_OnTextAfterOffset(void* self, QAccessibleTextInterface_OnTextAfterOffset_action _action);
	
	[LinkName("QAccessibleTextInterface_SuperTextAfterOffset")]
	public static extern libqt_string QAccessibleTextInterface_SuperTextAfterOffset(void* self, c_int offset, QAccessible_TextBoundaryType boundaryType, c_int* startOffset, c_int* endOffset);
	[LinkName("QAccessibleTextInterface_TextAtOffset")]
	public static extern libqt_string QAccessibleTextInterface_TextAtOffset(void* self, c_int offset, QAccessible_TextBoundaryType boundaryType, c_int* startOffset, c_int* endOffset);
	
	public function void QAccessibleTextInterface_OnTextAtOffset_action(void* self, c_int offset, QAccessible_TextBoundaryType boundaryType, c_int* startOffset, c_int* endOffset);
	[LinkName("QAccessibleTextInterface_OnTextAtOffset")]
	public static extern libqt_string QAccessibleTextInterface_OnTextAtOffset(void* self, QAccessibleTextInterface_OnTextAtOffset_action _action);
	
	[LinkName("QAccessibleTextInterface_SuperTextAtOffset")]
	public static extern libqt_string QAccessibleTextInterface_SuperTextAtOffset(void* self, c_int offset, QAccessible_TextBoundaryType boundaryType, c_int* startOffset, c_int* endOffset);
	[LinkName("QAccessibleTextInterface_CharacterCount")]
	public static extern c_int QAccessibleTextInterface_CharacterCount(void* self);
	
	public function void QAccessibleTextInterface_OnCharacterCount_action(void* self);
	[LinkName("QAccessibleTextInterface_OnCharacterCount")]
	public static extern c_int QAccessibleTextInterface_OnCharacterCount(void* self, QAccessibleTextInterface_OnCharacterCount_action _action);
	
	[LinkName("QAccessibleTextInterface_SuperCharacterCount")]
	public static extern c_int QAccessibleTextInterface_SuperCharacterCount(void* self);
	[LinkName("QAccessibleTextInterface_CharacterRect")]
	public static extern void* QAccessibleTextInterface_CharacterRect(void* self, c_int offset);
	
	public function void QAccessibleTextInterface_OnCharacterRect_action(void* self, c_int offset);
	[LinkName("QAccessibleTextInterface_OnCharacterRect")]
	public static extern void* QAccessibleTextInterface_OnCharacterRect(void* self, QAccessibleTextInterface_OnCharacterRect_action _action);
	
	[LinkName("QAccessibleTextInterface_SuperCharacterRect")]
	public static extern void* QAccessibleTextInterface_SuperCharacterRect(void* self, c_int offset);
	[LinkName("QAccessibleTextInterface_OffsetAtPoint")]
	public static extern c_int QAccessibleTextInterface_OffsetAtPoint(void* self, void** point);
	
	public function void QAccessibleTextInterface_OnOffsetAtPoint_action(void* self, void** point);
	[LinkName("QAccessibleTextInterface_OnOffsetAtPoint")]
	public static extern c_int QAccessibleTextInterface_OnOffsetAtPoint(void* self, QAccessibleTextInterface_OnOffsetAtPoint_action _action);
	
	[LinkName("QAccessibleTextInterface_SuperOffsetAtPoint")]
	public static extern c_int QAccessibleTextInterface_SuperOffsetAtPoint(void* self, void** point);
	[LinkName("QAccessibleTextInterface_ScrollToSubstring")]
	public static extern void QAccessibleTextInterface_ScrollToSubstring(void* self, c_int startIndex, c_int endIndex);
	
	public function void QAccessibleTextInterface_OnScrollToSubstring_action(void* self, c_int startIndex, c_int endIndex);
	[LinkName("QAccessibleTextInterface_OnScrollToSubstring")]
	public static extern void QAccessibleTextInterface_OnScrollToSubstring(void* self, QAccessibleTextInterface_OnScrollToSubstring_action _action);
	
	[LinkName("QAccessibleTextInterface_SuperScrollToSubstring")]
	public static extern void QAccessibleTextInterface_SuperScrollToSubstring(void* self, c_int startIndex, c_int endIndex);
	[LinkName("QAccessibleTextInterface_Attributes")]
	public static extern libqt_string QAccessibleTextInterface_Attributes(void* self, c_int offset, c_int* startOffset, c_int* endOffset);
	
	public function void QAccessibleTextInterface_OnAttributes_action(void* self, c_int offset, c_int* startOffset, c_int* endOffset);
	[LinkName("QAccessibleTextInterface_OnAttributes")]
	public static extern libqt_string QAccessibleTextInterface_OnAttributes(void* self, QAccessibleTextInterface_OnAttributes_action _action);
	
	[LinkName("QAccessibleTextInterface_SuperAttributes")]
	public static extern libqt_string QAccessibleTextInterface_SuperAttributes(void* self, c_int offset, c_int* startOffset, c_int* endOffset);
	[LinkName("QAccessibleTextInterface_OperatorAssign")]
	public static extern void QAccessibleTextInterface_OperatorAssign(void* self, void** param1);
}
// --------------------------------------------------------------
// QAccessibleEditableTextInterface
// --------------------------------------------------------------
[CRepr]
struct QAccessibleEditableTextInterface_Ptr
{
	public void* Ptr;
	public this(void* ptr)
	{
		this.Ptr = ptr;
	}
	public void DeleteText(c_int startOffset, c_int endOffset)
	{
		CQt.QAccessibleEditableTextInterface_DeleteText((.)this.Ptr, startOffset, endOffset);
	}
	public void InsertText(c_int offset, String text)
	{
		CQt.QAccessibleEditableTextInterface_InsertText((.)this.Ptr, offset, libqt_string(text));
	}
	public void ReplaceText(c_int startOffset, c_int endOffset, String text)
	{
		CQt.QAccessibleEditableTextInterface_ReplaceText((.)this.Ptr, startOffset, endOffset, libqt_string(text));
	}
}
